fixing whitespace

--- a/homepage.css
+++ b/homepage.css
@@ -20,6 +20,7 @@ float: left;
 
 .entirepage{
 min-width: 60em;
+max-height: 100%;
 border: 1px solid red;
 
 }
